--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
     "axios": "^1.4.0",
+    "http-proxy-middleware": "^2.0.6",
+    "https-proxy-agent": "^5.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
@@ -45,6 +47,7 @@
       "last 1 safari version"
     ]
   },
+  "proxy": "https://api.clinicaltrialskorea.com",
   "devDependencies": {
     "@types/react-redux": "^7.1.25",
     "tailwindcss": "^3.3.2"
